--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       </div>
 
       <div class="card">
-        <div class="section-title">Сводка по выбранному режиму (слева)</div>
+        <div class="section-title">Сводка по выбранному режиму </div>
         <div class="two-col">
           <div>
             <div>Взносы работодателя в месяц:</div>
