--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <title>Калькулятор налогов и взносов в России (2025)</title>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover"
+  />
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 16px;
+      padding-top: calc(16px + env(safe-area-inset-top));
+      padding-bottom: calc(16px + env(safe-area-inset-bottom));
       background: #f4f5f7;
       color: #222;
+      -webkit-text-size-adjust: 100%;
     }
     h1 {
       margin-top: 0;
@@ -20,9 +27,10 @@
       max-width: 1100px;
       margin: 0 auto;
       background: #fff;
-      border-radius: 10px;
-      padding: 20px 24px 28px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
+      border-radius: 14px;
+      padding: 20px 18px 28px;
+      box-shadow: 0 12px 26px rgba(0, 0, 0, 0.08);
+      border: 1px solid #e6e9ee;
     }
     .grid {
       display: grid;
@@ -38,7 +46,7 @@
     }
     .card {
       background: #fafbfc;
-      border-radius: 8px;
+      border-radius: 10px;
       padding: 14px 16px;
       border: 1px solid #e1e4e8;
       margin-bottom: 16px;
@@ -50,9 +58,9 @@
     }
     input[type="number"] {
       width: 100%;
-      padding: 8px 10px;
-      font-size: 14px;
-      border-radius: 6px;
+      padding: 10px 12px;
+      font-size: 15px;
+      border-radius: 8px;
       border: 1px solid #cfd7df;
       box-sizing: border-box;
     }
@@ -81,7 +89,7 @@
       margin-top: 6px;
     }
     th, td {
-      padding: 6px 8px;
+      padding: 8px 10px;
       border-bottom: 1px solid #e1e4e8;
       text-align: right;
       white-space: nowrap;
@@ -127,9 +135,81 @@
       background: #eee;
       margin-left: 4px;
     }
-    @media (max-width: 900px) {
+    /* --- Мобильная адаптация под iPhone 16 Pro Max --- */
+    @media (max-width: 820px) {
+      body {
+        padding: 14px;
+        padding-top: calc(14px + env(safe-area-inset-top));
+        padding-bottom: calc(14px + env(safe-area-inset-bottom));
+      }
+
+      h1 {
+        font-size: 22px;
+        line-height: 1.25;
+        margin-bottom: 8px;
+      }
+
+      .container {
+        padding: 18px 14px 22px;
+        border-radius: 12px;
+        box-shadow: 0 10px 22px rgba(0, 0, 0, 0.07);
+      }
+
       .grid {
         grid-template-columns: 1fr;
+        gap: 14px;
+      }
+
+      .card {
+        padding: 12px 12px 14px;
+        margin-bottom: 12px;
+      }
+
+      label {
+        font-size: 14px;
+      }
+
+      input[type="number"] {
+        font-size: 16px;
+        padding: 12px 14px;
+      }
+
+      .radio-group {
+        gap: 8px 14px;
+      }
+
+      .section-title {
+        margin-bottom: 6px;
+      }
+
+      table {
+        font-size: 13px;
+      }
+
+      th, td {
+        padding: 7px 8px;
+      }
+
+      .two-col {
+        grid-template-columns: 1fr;
+        gap: 6px;
+      }
+
+      .note {
+        font-size: 12px;
+      }
+    }
+
+    /* Оптимизация для больших экранов iPhone в альбомной ориентации */
+    @media (min-width: 821px) and (max-width: 1100px) {
+      .grid {
+        grid-template-columns: 1fr 1.05fr;
+        gap: 16px;
+      }
+
+      body {
+        padding-left: calc(20px + env(safe-area-inset-left));
+        padding-right: calc(20px + env(safe-area-inset-right));
       }
     }
   </style>
